Historial de pedidos

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,15 @@
     <script src="assets/js/arrive.min.js"></script>
     <script src="assets/js/material.min.js" type="text/javascript"></script>
 
+   <!-- <script src="assets/js/howler.js"></script>
+    <script>
+        var sound = new Howl({
+          src: ['assets/sound/sprite.mp3', 'sprite.mp3']
+        });
+        
+        sound.play();
+    </script>-->
+
     <!--  Charts Plugin -->
     <script src="assets/js/chartist.min.js"></script>
 
